# saladcloud

./: .gitignore  Cargo.toml  Makefile  README.md
snapshot/: Cargo.toml  README.md
snapshot/.openapi-generator/: FILES
snapshot/docs/: Container.md  ContainerGroupCollection.md  ContainerGroupInstanceCollection.md  ContainerGroupInstancePatch.md  ContainerGroupInstanceStatusCount.md  ContainerGroupPatch.md  ContainerGroupQueueAutoscaler.md  ContainerRegistryAuthentication.md  ContainerRegistryAuthenticationBasic.md  CpuAvailabilityPrototype.md  GpuAvailabilityPrototype.md  GpuClass.md  InferenceEndpoint.md  LogEntry.md  LogEntryCollection.md  OrganizationsApi.md  QueueCollection.md  QueueJob.md  QueuePrototype.md  QueuesApi.md  UpdateContainerGroupNetworking.md  WebhookSecretKey.md
snapshot/src/apis/: configuration.rs  container_groups_api.rs  inference_endpoints_api.rs  logs_api.rs  mod.rs  organization_data_api.rs  organizations_api.rs  queues_api.rs  quotas_api.rs  system_logs_api.rs  webhook_secret_key_api.rs
snapshot/src/models/: container.rs  container_group.rs  container_group_collection.rs  container_group_instance.rs  container_group_instance_collection.rs  container_group_instance_patch.rs  container_group_instance_state.rs  container_group_instance_status_count.rs  container_group_liveness_probe.rs  container_group_networking.rs  container_group_networking_load_balancer.rs  container_group_patch.rs  container_group_priority.rs  container_group_probe_exec.rs  container_group_probe_grpc.rs  container_group_probe_http.rs  container_group_probe_http_header.rs  container_group_probe_tcp.rs  container_group_prototype.rs  container_group_queue_autoscaler.rs  container_group_queue_connection.rs  container_group_readiness_probe.rs  container_group_scaling_action.rs  container_group_startup_probe.rs  container_group_state.rs  container_group_status.rs  container_groups_quotas.rs  container_logging.rs  container_logging_axiom.rs  container_logging_datadog.rs  container_logging_datadog_tag.rs  container_logging_http.rs  container_logging_http_compression.rs  (+60 more)
src/: lib.rs
(+122 files in other folders)
